<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cardImage"
            android:layout_width="60dp"
            android:layout_height="80dp"
            android:contentDescription="cardImage"
            android:src="@drawable/ic_assignment" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/assignTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/assignment_title"
                style="@style/TextAppearance.AppCompat.Large"/>

            <TextView
                android:id="@+id/moduleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/module"
                />

<!--            <TextView-->
<!--                android:id="@+id/submissionLinkTextView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="@string/subLink"-->
<!--                />-->
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/update_assignment_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/delete_assignment_button"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:background="@color/white"
                android:contentDescription="@string/update"
                android:src="@drawable/ic_update" />
            <ImageButton
                android:id="@+id/delete_assignment_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:background="@color/white"
                android:contentDescription="@string/delete"
                android:padding="2dp"
                android:src="@drawable/ic_baseline_delete_24" />
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
