<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/moduleField"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/module"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/assignmentTitleField"
        android:layout_width="match_parent"
        android:inputType="text"

        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:fontFamily="sans-serif"
        android:hint="@string/assignment_title"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/weightingField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="sans-serif"
        android:hint="@string/weighting"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/submissionLinkField"
        android:inputType="text"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:fontFamily="sans-serif"
        android:hint="@string/subLink"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="Submit"
        android:layout_below="@id/submissionLinkField"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_centerHorizontal="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submissionLinkField" />

    <!--    <DatePicker-->
<!--        android:id="@+id/submissionDate"-->
<!--        android:layout_width="336dp"-->
<!--        android:layout_height="393dp"-->
<!--        android:layout_marginTop="280dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->
</RelativeLayout>
